# NxGraphics

./: .gitignore  BuildSdkAndroid.bat  BuildSdkWindows.bat  CMakeLists.txt  README.md
CMake/: PreCompiled.cmake  android.toolchain.cmake
NxDevice/: CMakeLists.txt  NxDevice.cpp  NxDevice.h  NxDevicePreCompiled.cpp  NxDevicePreCompiled.h  NxDevice_Device_Dmx.cpp  NxDevice_Device_Midi.cpp  NxDevice_Device_Osc.cpp  NxDevice_Device_OscOutputMsg.cpp  NxDevice_Hardware.cpp  NxDevice_Hardware.h  NxDevice_Headers.h  NxDevice_Log.cpp  NxDevice_Log.h  NxDevice_Midi.h  NxDevice_Midi_Manager.cpp  NxDevice_Plateform.cpp  NxDevice_Plateform.h  NxDevice_Prerequisites.h  NxDevice_Singleton.h  NxDevice_Stable_Headers.h  NxDevice_Utilities.cpp  NxDevice_Utilities.h
NxGraphics/: CMakeLists.txt  NxAnimation.cpp  NxAnimation.h  NxAnimationManager.cpp  NxAnimationManager.h  NxCamera.cpp  NxCamera.h  NxColourValue.cpp  NxColourValue.h  NxContentManager.cpp  NxContentManager.h  NxConversions.h  NxEngine.cpp  NxEngine.h  NxEntity.cpp  NxEntity.h  NxEntityCharacter.cpp  NxEntityCloth.h  (+183 more)
NxGraphicsSdk/: CMakeLists.txt
NxMocap/: CMakeLists.txt  NxMocap.cpp  NxMocap.h  NxMocapPreCompiled.cpp  NxMocapPreCompiled.h  NxMocap_Device.cpp  NxMocap_DeviceKinect.cpp  NxMocap_DeviceKinectMicrosoft.cpp  NxMocap_DeviceKinectOLD.cpp  NxMocap_DeviceKinectOpenNi2.cpp  NxMocap_Devices.h  NxMocap_Headers.h  NxMocap_Log.cpp  NxMocap_Log.h  NxMocap_Mysql.cpp  NxMocap_Mysql.h  NxMocap_NetStreamClient.cpp  NxMocap_NetStreamServer.cpp  NxMocap_Plateform.cpp  NxMocap_Plateform.h  NxMocap_Player.cpp  NxMocap_Player.h  NxMocap_PlayerBvh.cpp  NxMocap_PlayerKinect.cpp  NxMocap_PlayerPolhemus.cpp  NxMocap_Prerequisites.h  NxMocap_Recorder.cpp  NxMocap_Recorder.h  NxMocap_Singleton.h  NxMocap_Skeleton.cpp  NxMocap_Skeleton.h  NxMocap_Stream.h  NxMocap_User.cpp  NxMocap_Utilities.cpp  NxMocap_Utilities.h  NxMocap_Vector3.h
NxNetwork/: CMakeLists.txt  NxNetwork.cpp  NxNetwork.h  NxNetworkPreCompiled.cpp  NxNetworkPreCompiled.h  NxNetwork_Client.cpp  NxNetwork_Client.h  NxNetwork_Headers.h  NxNetwork_HttpClient.cpp  NxNetwork_HttpClient.h  NxNetwork_Log.cpp  NxNetwork_Log.h  NxNetwork_Plateform.cpp  NxNetwork_Plateform.h  NxNetwork_Prerequisites.h  NxNetwork_Server.cpp  NxNetwork_Server.h  NxNetwork_Singleton.h  NxNetwork_Utilities.cpp  NxNetwork_Utilities.h
NxSamples/Android/: CMakeLists.txt
NxSamples/Android/NxDeviceAndroidDemo/: CMakeLists.txt  NxDevice.java  main.cpp  main.h
NxSamples/Android/NxGraphicsAndroidDemo/: CMakeLists.txt  Example.java  main.cpp  main.h
NxSamples/Android/NxGraphicsVuforia5Demo/: AbstractURLHandler.java  ApacheURLLister.java  BasicURLHandler.java  CMakeLists.txt  CopyProgressEvent.java  CopyProgressListener.java  Credentials.java  CredentialsStore.java  DownloadFilesTask.java  Example.java  FileChooser.java  FileUtil.java  IvyAuthenticator.java  NxCameraStreamer.java  NxFileUploader.java  NxVideoFrontCamera.java  NxVideoFrontCameraView.java  OgreActivityJNI.java  Shaders.h  URLHandler.java  URLHandlerRegistry.java  VuforiaControl.java  VuforiaFreeframe.java  VuforiaGlView.java  VuforiaLoadingDialogHandler.java  VuforiaMenu.java  VuforiaMenuAnimator.java  VuforiaMenuGroup.java  VuforiaMenuView.java  VuforiaSession.java  VuforiaUtils.java  index.php  main.cpp  main.h  upload.php
NxSamples/Android/NxGraphicsVuforia5Demo/res/layout/: sample_app_menu_layer.xml
NxSamples/Android/NxGraphicsVuforiaDemo/: CMakeLists.txt  Example.java  NxVideoSurfaceView.java  OgreActivityJNI.java  Shaders.h  VuforiaControl.java  VuforiaExceptions.java  VuforiaFreeframe.java  VuforiaFreeframeGL.java  VuforiaGlView.java  VuforiaMath.h  VuforiaMenu.java  VuforiaMenuGroup.java  VuforiaMenuInterface.java  VuforiaMenuView.java  VuforiaMesh.java  VuforiaMeshObject.java  VuforiaSession.java  VuforiaShaders.java  VuforiaTargetRenderer.java  VuforiaTeapot.java  VuforiaTexture.java  main.cpp  main.h
NxSamples/Android/NxGraphicsVuforiaDemo/res/values/: strings.xml
NxSamples/Android/NxNetworkAndroidDemo/: CMakeLists.txt  Example.java  main.cpp  main.h  main.xml
NxSamples/Android/NxSoundAndroidDemo/: CMakeLists.txt  Example.java  main.cpp  main.h  main.xml
NxSamples/Android/media/assets/: resources.cfg
NxSamples/Android/media/assets/materials/programs/: fragment.glsles  vertex.glsles
NxSamples/Android/media/assets/materials/scripts/: Gizmos.material  dedemymesh.mesh  myscene.material  scene.material  screen.mesh  video.material
NxSound/: CMakeLists.txt  FileRead.h  FileReadBase.cpp  FileReadFlac.cpp  FileReadFlac.h  FileReadMp3.cpp  FileReadMp3.h  FileReadOgg.cpp  FileReadOgg.h  FileReadWav.cpp  FileReadWav.h  NxSound.cpp  NxSound.h  NxSoundPreCompiled.cpp  NxSoundPreCompiled.h  NxSound_Device.cpp  NxSound_Device.h  NxSound_Device_Input.cpp  NxSound_Device_Input.h  NxSound_Device_Output.cpp  NxSound_Device_Output.h  NxSound_Effect_3D.cpp  NxSound_Effect_3D.h  NxSound_Effect_Base.cpp  NxSound_Effect_Base.h  NxSound_Effect_BeatDetector.cpp  NxSound_Effect_BeatDetector.h  NxSound_Effect_Chorus.cpp  NxSound_Effect_Chorus.h  NxSound_Effect_Echo.cpp  NxSound_Effect_Echo.h  NxSound_Effect_Granulate.cpp  NxSound_Effect_Granulate.h  NxSound_Effect_OggBroadCaster.cpp  NxSound_Effect_OggBroadCaster.h  NxSound_Effect_Shift.cpp  NxSound_Effect_Shift.h  NxSound_Effect_VSTHost.cpp  NxSound_Effect_VSTHost.h  NxSound_Effect_VSTPlugin.cpp  (+37 more)
NxVideo/: CMakeLists.txt  NxVideo.cpp  NxVideo.h  NxVideoPreCompiled.cpp  NxVideoPreCompiled.h  NxVideo_Avi_Player.cpp  NxVideo_Avi_Recorder.cpp  NxVideo_Buffer.cpp  NxVideo_Format.h  NxVideo_Grabber.cpp  NxVideo_Grabber.h  NxVideo_Grabber_Directshow.cpp  NxVideo_Grabber_PointGrey.cpp  NxVideo_Grabber_Quicktime.cpp  NxVideo_Grabber_VFW.cpp  NxVideo_Headers.h  NxVideo_Log.cpp  NxVideo_Log.h  NxVideo_Mov_Player.cpp  NxVideo_Mov_Player2.cpp  NxVideo_Plateform.cpp  NxVideo_Plateform.h  NxVideo_Player.cpp  NxVideo_Player.h  NxVideo_Prerequisites.h  NxVideo_Recorder.cpp  NxVideo_Singleton.h  NxVideo_Theora_Player.cpp  NxVideo_Theora_Playerold.cpp  NxVideo_Utilities.cpp  NxVideo_Utilities.h  NxVideo_Video.h
(+93 files in other folders)
